--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Franck Kouagnang | Developper</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -21,14 +21,23 @@
         </nav>
     </header>
     <main>
-        <p>Bonjour, je suis un jeune programmeur ambitieux, prêt à me lancer dans des projets stimulants et à continuer d'apprendre au quotidien. Mon portfolio met en 
+        <section>
+            <h3>Welcome</h3>
+            <p>Bonjour, je suis un jeune programmeur ambitieux, prêt à me lancer dans des projets stimulants et à continuer d'apprendre au quotidien. Mon portfolio met en 
             avant mes projets personnels, mes contributions à des équipes de développement et mes expériences de stage, où j'ai pu mettre en pratique mes compétences en
              programmation. Explorez mon travail pour voir comment j'ai progressé en tant que programmeur junior, en développant des applications simples mais 
-             fonctionnelles et en renforçant ma compréhension des concepts clés de la programmation.</p>
-
+             fonctionnelles et en renforçant ma compréhension des concepts clés de la programmation.</p> 
+        </section>
+        <section>
+            <h3>Quelques projets phares</h3>
+        </section>
     </main>
-    <footer id="Contact">
-        <p>2023 &copy; Franck Kouagnang</p>
+    <section id="Contact">
+        <h3>Contact</h3>
+        <p>Vous pouvez me contacter en utilisant l'un des moyens suivants :</p>
+    </section>     
+    <footer >
+        <span>2023 &copy; Franck Kouagnang</span>
     </footer>
     
 </body>
