--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <header>
         <h1>Franck Kouagnang</h1>
+        <span class = "separator"></span>
         <h2>Full Stack developper & Graphic designer, Illustrator</h2>
+        <img id="logo" src="./img/logo.png" alt="">
+        
+    </header>
+    <main>
         <nav>
             <ul>
                 <li><a href="#" title="Back to home">Home</a></li>
@@ -19,8 +24,6 @@
                 <li><a href="#">About me</a></li>
             </ul>
         </nav>
-    </header>
-    <main>
         <section>
             <h3>Welcome</h3>
             <p>Bonjour, je suis un jeune programmeur ambitieux, prêt à me lancer dans des projets stimulants et à continuer d'apprendre au quotidien. Mon portfolio met en 
@@ -31,11 +34,11 @@
         <section>
             <h3>Quelques projets phares</h3>
         </section>
-    </main>
-    <section id="Contact">
-        <h3>Contact</h3>
-        <p>Vous pouvez me contacter en utilisant l'un des moyens suivants :</p>
-    </section>     
+        <section id="Contact">
+            <h3>Contact</h3>
+            <p>Vous pouvez me contacter en utilisant l'un des moyens suivants :</p>
+        </section>
+    </main>     
     <footer >
         <span>2023 &copy; Franck Kouagnang</span>
     </footer>
