--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy;Portfolio | &copy;Collège La Cité</p>
+        <p>&copy;2023 | &copy;Collège La Cité</p>
         <p id="developpeur">Développé par <strong>&lt;Franck Kouagnang&gt;</strong></p>
     </footer>
     <script src="./js/main.js"></script>
