--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
                 <li><a href="#"><i class="fab fa-github"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="#"><i class="fab fa-telegram"></i></a></li>
             </ul>
             <div class="container">
                 <div class="row align-items-center" >
                     <div class="home-text">
                         <h4>Hello I'm</h4>
                         <h1>Franck Kouagnang</h1>
-                        <span>Software Developer and Design graphic</span>
+                        <span>Software Developer and Graphic Designer</span>
                         <P>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. At deleniti a
                              veniam atque vero illum corporis rerum in, ea totam ducimus laborum inventore quos, 
